--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -311,7 +311,8 @@ navbar:
     - { key: "archive", link: "/archives/", icon: "iconfont icon-archive-fill" }
     - { key: "category", link: "/categories/", icon: "iconfont icon-category-fill" }
     - { key: "tag", link: "/tags/", icon: "iconfont icon-tags-fill" }
-    - { key: "about", link: "/about/", icon: "iconfont icon-user-fill" }
+    # - { key: "about", link: "/about/", icon: "iconfont icon-user-fill" }
+    - { key: "程宽的简历", link: "https://hocko333.github.io/resume/", icon: "iconfont icon-user-fill" }
     - { key: "", link: "https://github.com/hocko333", icon: "iconfont icon-github-fill" }
     #- { key: "links", link: "/links/", icon: "iconfont icon-link-fill" }
 
@@ -386,11 +387,11 @@ footer:
   # 页脚第一行文字的 HTML，建议保留 Fluid 的链接，用于向更多人推广本主题
   # HTML of the first line of the footer, it is recommended to keep the Fluid link to promote this theme to more people
   content: '
-    <span>By KUAN</span>
-    <span style="margin: 0 3px;">|</span>
-    Published with <a href="https://hexo.io" target="_blank" rel="nofollow noopener"><span>Hexo</span></a>
-    <span style="margin: 0 3px;">|</span>
-    Theme with <a href="https://github.com/fluid-dev/hexo-theme-fluid" target="_blank" rel="nofollow noopener"><span>Fluid</span></a>
+    <span style="font-size: 14px;">By KUAN</span>
+    <span style="margin: 0 3px; font-size: 14px;">|</span>
+    <a href="https://hexo.io" target="_blank" rel="nofollow noopener" style="font-size: 14px;">Hexo</a>
+    <span style="margin: 0 3px; font-size: 14px;">x</span>
+    <a href="https://github.com/fluid-dev/hexo-theme-fluid" target="_blank" rel="nofollow noopener" style="font-size: 14px;">Fluid</a>
   '
 
   # 展示网站的 PV、UV 统计数
@@ -429,7 +430,7 @@ footer:
 index:
   # 首页 Banner 头图，可以是相对路径或绝对路径，以下相同
   # Path of Banner image, can be a relative path or an absolute path, the same on other pages
-  banner_img: /img/default.png
+  banner_img: /img/index_banner.jpg
 
   # 头图高度，屏幕百分比
   # Height ratio of banner image
@@ -448,7 +449,7 @@ index:
 
     # 为空则按 hexo config.subtitle 显示
     # If empty, text based on `subtitle` in hexo config
-    text: "DOTA2, Rock and Code"
+    text: "无数渺小的思考填满了人的一生"
 
     # 通过 API 接口作为首页副标题的内容，必须返回的是 JSON 格式，如果请求失败则按 text 字段显示，该功能必须先开启 typing 打字机功能
     # Subtitle of the homepage through the API, must be returned a JSON. If the request fails, it will be displayed in `text` value. This feature must first enable the typing animation
@@ -501,7 +502,7 @@ index:
 # Post Page
 #---------------------------
 post:
-  banner_img: /img/default.png
+  banner_img: /img/post_banner.jpg
   banner_img_height: 70
   banner_mask_alpha: 0.3
 
@@ -795,7 +796,7 @@ cusdis:
 # Archive Page
 #---------------------------
 archive:
-  banner_img: /img/default.png
+  banner_img: /img/archvies_banner.jpg
   banner_img_height: 60
   banner_mask_alpha: 0.3
   subtitle:
@@ -807,7 +808,7 @@ archive:
 #---------------------------
 category:
   enable: true
-  banner_img: /img/default.png
+  banner_img: /img/category_banner.jpg
   banner_img_height: 60
   banner_mask_alpha: 0.3
   subtitle:
@@ -837,7 +838,7 @@ category:
 #---------------------------
 tag:
   enable: true
-  banner_img: /img/default.png
+  banner_img: /img/tag_banner.jpg
   banner_img_height: 80
   banner_mask_alpha: 0.3
   subtitle:
@@ -855,13 +856,13 @@ tag:
 #---------------------------
 about:
   enable: true
-  banner_img: /img/default.png
+  banner_img: /img/tag_banner.jpg
   banner_img_height: 60
   banner_mask_alpha: 0.3
   subtitle: "KUAN"
   avatar: /img/avatar1.png
   name: "Hocko"
-  intro: "DOTA2, Rock and Code"
+  intro: "你好，我叫程宽"
   # 更多图标可从 https://hexo.fluid-dev.com/docs/icon/ 查找，`class` 代表图标的 css class，添加 `qrcode` 后，图标不再是链接而是悬浮二维码
   # More icons can be found from https://hexo.fluid-dev.com/docs/en/icon/  `class` is the css class of the icon. If adding `qrcode`, The icon is no longer a link, but a hovering QR code
   icons:
@@ -877,7 +878,7 @@ about:
 # Custom Page through `hexo new page`
 #---------------------------
 page:
-  banner_img: /img/default.png
+  banner_img: /img/tag_banner.jpg
   banner_img_height: 60
   banner_mask_alpha: 0.3
 
@@ -888,7 +889,7 @@ page:
 #---------------------------
 page404:
   enable: true
-  banner_img: /img/default.png
+  banner_img: /img/tag_banner.jpg
   banner_img_height: 85
   banner_mask_alpha: 0.3
   subtitle: "Page not found"
@@ -900,7 +901,7 @@ page404:
 #---------------------------
 links:
   enable: true
-  banner_img: /img/default.png
+  banner_img: /img/tag_banner.jpg
   banner_img_height: 60
   banner_mask_alpha: 0.3
   subtitle:
